# Gendelbrot

./: Cargo.toml  LICENSE  README.md  time.sh
src/: main.rs  tests.rs
