[package]
name = "gendelbrot"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A small, simplistic mandelbrot image generator."
repository = "https://github.com/JohnTWilkinson/Gendelbrot"
readme = "README.md"
categories = ["command-line-utilities", "mathematics", "rendering"]
keywords = ["command-line", "mandelbrot", "generator"]

[dependencies]
clap = { version = "4.5.15", features = ["cargo", "derive"] }
dunce = "1.0.5"
image = "0.25.2"
